[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day10",
    "day13",
]

[workspace.package]
authors = ["Bo Kleynen"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.0.29", features = ["derive"] }

[profile.release]
lto = true

